[package]
name = "httpbox"
version = "0.2.0"
authors = ["Kevin Stone <kevinastone@gmail.com>"]
edition = "2018"

[dependencies]
gotham_async = { path = "gotham_async" }
askama = { version="^0.8", features=["with-gotham"] }
byteorder = "^1.3.2"
bytes = "0.5"
clap = "^2.33.0"
cookie = "^0.12.0"
failure = "^0.1.5"
futures = "0.3.1"
futures-timer = "^0.3"
gotham = "0.5.0-dev"
gotham_derive = "^0.4"
headers = "0.3"
http = "^0.2"
hyper = "0.13.1"
itertools = "^0.8.0"
lazy_static = "^1.2.0"
mime = "^0.3.13"
num_cpus = "^1.10.1"
pretty_env_logger = "^0.3"
rand = { version="^0.7", features = ["small_rng"]}
serde = "^1.0.98"
serde_derive = "^1.0.98"
tokio = { version = "0.2.6", features = ["full"] }
url = "^2.1.0"

[patch.crates-io]
gotham = { git = "https://github.com/gotham-rs/gotham" }
